# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check-file.yml
page_loader/: cli.py  data_extraction.py  download.py  html.py  init_logger.py  loading.py  logging.py  storage.py  url.py  work_with_file_system.py  work_with_html_page.py  working_with_url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_download.py  test_page_loader.py
tests/fixtures/: correct_html.html  loaded.txt  test_file.css  test_file.js  test_html.html
