[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nastyavin86@br.ru>"]
packages = [
  { include = "page-loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.page_loader:main'

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
